deployment.yaml
# Deployment for service A
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  selector:
    matchLabels:
      run: service-a
  replicas: 1
  template:
    metadata:
      labels:
        run: service-a
    spec:
      containers:
      - name: service-a
        image: taltal47/mstaskpython:latest
        ports:
        - containerPort: 8080
---
# Deployment for service B
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  selector:
    matchLabels:
      run: service-b
  replicas: 1
  template:
    metadata:
      labels:
        run: service-b
    spec:
      containers:
      - name: service-b
        image: strm/helloworld-http:latest
        ports:
        - containerPort: 80
---
# ServiceA
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    run: service-a
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: service-a
---
# ServiceB
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    run: service-b
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: service-b
---
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: msingress
spec:
  rules:
  - http:
      paths:
      - path: /service-a
        backend:
          serviceName: service-a
          servicePort: 80
      - path: /service-b
        backend:
          serviceName: service-b
          servicePort: 80
